# EasySoccerData

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml  pylint.yml
esd/: __init__.py  utils.py
esd/fbref/: __init__.py  client.py  service.py  utils.py
esd/fbref/types/: __init__.py  details.py  match.py
esd/promiedos/: __init__.py  client.py  service.py
esd/promiedos/types/: __init__.py  event.py  match.py  team.py  tournament.py
esd/sofascore/: __init__.py  client.py  service.py
esd/sofascore/types/: __init__.py  bracket.py  comment.py  country.py  event.py  incident.py  lineup.py  manager.py  match_stats.py  player.py  player_attributes.py  shot.py  standing.py  team.py  top.py  top_tournament_players.py  top_tournament_teams.py  transfer.py
examples/sofascore/: live_table.py
